--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ button {
     outline: none;
     padding: 16px;
     cursor: pointer;
-    transition: 0.4s;
+    transition: 0.1s;
     font-weight: 700;
     display: inline-block;
     height: 70px;
@@ -53,6 +53,12 @@ button {
     border-radius: 8px;
     color: white;
     margin: 5px;
+}
+button:hover {
+    background-color: #0c0c0c;
+}
+button:active {
+    transform: scale(1.1);
 }
 .operators {
     margin-top: 25px;
